fix configure script if qt is requested but neither qt6 nor qt5 is found
The script gave an error or warning but still produced a Makefile
that attempted to build the qt terminal.

--- a/configure.ac
+++ b/configure.ac
@@ -1107,6 +1107,8 @@ if test "${enable_qt}" = yes ; then
         CXXFLAGS="$CXXFLAGS -fPIC"
         AC_MSG_RESULT([The Qt terminal will use Qt5.])
         QTVER="5"
+      else
+        enable_qt_ok=no
       fi
     fi 
   fi
